@@ -489,8 +489,8 @@ legend {
 /* POPUP */
 /*********/
 
-#popup {
-	position: absolute;
+#p4a_popup {
+	position: fixed;
 	top: 0;
 	left: 0;
 	margin:auto;
@@ -501,47 +501,31 @@ legend {
 	border: 2px solid #4B718A;
 }
 
-#popup h2 {
+* html #p4a_popup {
+	position: absolute;
+}
+
+#p4a_popup h2 {
 	background: #F4F7FA;
 	margin: 0;
 	line-height: 32px;
 }
 
-#popup #sheetContainerPopup {
+#p4a_popup #sheetContainerPopup {
 	margin: 20px;
 }
 
-/* jqModal base Styling courtesy of Brice Burgess <bhb@iceburg.net> */
-.jqmWindow {
-    display: none;
-
-    position: fixed;
-    top: 17%;
-    left: 50%;
-
-    margin-left: -300px;
-    width: 600px;
-
-    background-color: #EEE;
-    color: #333;
-    border: 1px solid black;
-    padding: 12px;
+.jqmOverlay {
+	background-color: #eee;
 }
 
-.jqmOverlay { background-color: #000; }
-
-/* Background iframe styling for IE6. Prevents ActiveX bleed-through (<select> form elements, etc.) */
-* iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
+* iframe.jqm {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
 	width: expression(this.parentNode.offsetWidth+'px');
 	height: expression(this.parentNode.offsetHeight+'px');
-}
-
-/* Fixed posistioning emulation for IE6
-     Star selector used to hide definition from browsers other than IE6
-     For valid CSS, use a conditional include instead */
-* html .jqmWindow {
-     position: absolute;
-     top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
 }
 
 /****************/
